<resources>
    <string name="app_name">Suzuki Bangladesh</string>
    <string name="serverAddress">http://icebd.com/suzuki/suzukiApi/Server/</string>
    <string name="auth_key">9736fd0b8c4dfd2964acbfb31d24eed3</string>
    <string name="user_id">0</string>
    <string name="txt_suzuki">SUZUKI</string>

    <string name="error_no_internet">No internet connection. Please active your internet and try again.</string>
    <string name="error_sever_connection">Failed to fetch data! Please try again.</string>

     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="gcm_defaultSenderId">880658290830</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="my_bike_btn_txt">MY BIKE</string>
    <string name="spare_parts_btn_txt">SPARE PARTS</string>
    <string name="request_services_btn_txt">REQUEST SERVICES</string>
    <string name="news_events_btn_txt"><![CDATA[NEWS & EVENTS]]></string>
    <string name="promotion_btn_txt">Promotion</string>
    <string name="invite_friends_btn_txt">INVITE FRIENDS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sos_value">+8801671079738</string>
    <string name="facebook_page_address">http://www.facebook.com/suzukibd/</string>
    <string name="facebook_url_schemes">fb://page/768137996607819</string>
    <string name="share_using">Share Using</string>

    <string name="qty_txt">QTY</string>
    <string name="item_txt">ITEM</string>
    <string name="price_txt">PRICE</string>
    <string name="subtotal_txt">Sub Total</string>
    <string name="total_with_vat_txt">Total (inc VAT)</string>
    <string name="pay_with">PAY WITH</string>
    <string name="no_items_display_txt">No Item Found</string>

    <string name="text_accept_bkash">We accept bKash payment</string>
    <string name="text_access_bkash">Access bKash system from own bKash wallet</string>
    <string name="text_bkash_step1">Step 1 : Select 3.payment</string>
    <string name="text_bkash_step2">Step 2 : Merchant bKash wattet no. 01777776660</string>
    <string name="text_bkash_step3">Step 3 : Enter amount : Total Price (Such as 190)</string>
    <string name="text_bkash_step4">Step 4 : Enter Reference : Subscribe code L3RE5281</string>
    <string name="text_bkash_step5">Step 5 : Enter Counter No. 1</string>
    <string name="text_bkash_ok">Than ok</string>
    <string name="text_bkash_rec_trx">You will receive a payment confirmation SMS with</string>
    <string name="text_bkash_trx">TrxID</string>

    <string-array name="navigation_drawer_items_array">
        <item>HOME</item>
        <item>MY BIKE</item>
        <item>SPARE PARTS</item>
        <item>REQUEST SERVICE</item>
        <item>NEWS AND EVENTS</item>
        <item>PROMOTIONS</item>
        <item>QUIZZES</item>
        <item>SOS</item>
        <item>INVITE FRIENDS</item>
        <item>SOCIAL MEDIA FACEBOOK</item>
        <item>CHANGE PASSWORD</item>
        <!--item>FORGOT PASSWORD</item>
        <item>SIGNUP</item-->
        <item>LOGIN</item>
        <item>LOGOUT</item>
    </string-array>
</resources>
